remove content-visibilty, it cause issues

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,7 +23,3 @@ body {
 img {
   max-width: 100%;
 }
-
-section {
-  content-visibility: auto;
-}
